[gd_scene load_steps=11 format=2]

[ext_resource path="res://tests/Player.gd" type="Script" id=1]
[ext_resource path="res://cross.png" type="Texture" id=2]
[ext_resource path="res://hpicon.png" type="Texture" id=3]
[ext_resource path="res://crosscircle.png" type="Texture" id=4]
[ext_resource path="res://stamina_drain.png" type="Texture" id=5]

[sub_resource type="CapsuleShape" id=1]
height = 6.0

[sub_resource type="BoxShape" id=2]

[sub_resource type="CapsuleShape" id=3]
height = 2.0

[sub_resource type="DynamicFontData" id=4]
font_path = "res://OpenSans-Bold.ttf"

[sub_resource type="DynamicFont" id=5]
size = 28
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 4 )

[node name="Player" type="KinematicBody"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 0, 0 )
script = ExtResource( 1 )

[node name="stamina_drain" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 5 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
far = 8192.0

[node name="camray" type="RayCast" parent="Camera"]
enabled = true
cast_to = Vector3( 0, 0, -100 )

[node name="useray" type="RayCast" parent="Camera"]
enabled = true
cast_to = Vector3( 0, 0, -5 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( -1, 3.25842e-07, 8.74228e-08, -8.74228e-08, 4.37114e-08, -1, -3.25842e-07, -1, -4.37114e-08, -0.000135422, -0.997492, -0.000874519 )
shape = SubResource( 1 )

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( -1, 3.25842e-07, 8.74228e-08, -8.74228e-08, 4.37114e-08, -1, -3.25842e-07, -1, -4.37114e-08, 0, -2, 0 )
shape = SubResource( 2 )

[node name="DuckCollisionShape" type="CollisionShape" parent="."]
transform = Transform( -1, 3.25842e-07, 8.74228e-08, -8.74228e-08, 4.37114e-08, -1, -3.25842e-07, -1, -4.37114e-08, 0, -3, 0 )
shape = SubResource( 3 )

[node name="CollisionRay" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, 0 )
enabled = true
cast_to = Vector3( 0, -4, 0 )

[node name="CollisionRay2" type="RayCast" parent="."]
transform = Transform( -1, 8.74228e-08, -3.25842e-07, -8.74228e-08, -1, -1.4243e-14, -3.25842e-07, 1.4243e-14, 1, 0, -1, 0 )
enabled = true
cast_to = Vector3( 0, -4, 0 )

[node name="StandingCamPos" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )

[node name="DuckCamPos" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )

[node name="CamSmoothingUp" type="Tween" parent="."]

[node name="CamSmoothingDown" type="Tween" parent="."]

[node name="cross" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="hpicon" type="Sprite" parent="."]
position = Vector2( 26, 693 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )

[node name="hptext" type="RichTextLabel" parent="."]
margin_left = 54.0
margin_top = 673.0
margin_right = 114.0
margin_bottom = 713.0
custom_fonts/normal_font = SubResource( 5 )
custom_colors/default_color = Color( 1, 0, 0, 1 )
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ammotext" type="RichTextLabel" parent="."]
margin_left = 1060.0
margin_top = 670.0
margin_right = 1280.0
margin_bottom = 720.0
custom_fonts/normal_font = SubResource( 5 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[center] 7/7"
text = " 7/7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wpntext" type="RichTextLabel" parent="."]
margin_left = 1060.0
margin_top = 640.0
margin_right = 1280.0
margin_bottom = 690.0
custom_fonts/normal_font = SubResource( 5 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[center] Pistol"
text = " Pistol"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="crosscircle" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 4 )

[node name="grabray" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, -1.5 )

[node name="viewray" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
enabled = true
cast_to = Vector3( 0, 0, -1.5 )

[node name="ShootingSound" type="AudioStreamPlayer" parent="."]

[node name="Fire_timer" type="Timer" parent="."]

[node name="Reload_timer" type="Timer" parent="."]
[connection signal="tween_all_completed" from="CamSmoothingDown" to="." method="_on_CamSmoothingDown_tween_all_completed"]
[connection signal="timeout" from="Fire_timer" to="." method="_on_Fire_timer_timeout"]
[connection signal="timeout" from="Reload_timer" to="." method="_on_Reload_timer_timeout"]
